<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/fab_margin"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/mesclar_fotos_videos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/mesclar_fotos_e_videos"/>

    <CheckBox
        android:id="@+id/mesclar_armazenamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:visibility="gone"
        android:text="@string/mesclar_armazenamento_interno_e_externo"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/cardbackgroundColor"
        app:cardCornerRadius="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/ordenar_album_por"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rd_album_nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nome" />

                <RadioButton
                    android:id="@+id/rd_album_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/data" />

            </RadioGroup>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="?attr/cardbackgroundColor"
        app:cardCornerRadius="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/ordenar_photo_por"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rd_photo_nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nome" />

                <RadioButton
                    android:id="@+id/rd_photo_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/data" />

            </RadioGroup>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/reload_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reload_media"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1"
        android:shrinkColumns="0,1">

        <TableRow>
            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                style="@style/Widget.AppCompat.Button.Colored"/>

            <Button
                android:id="@+id/ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                style="@style/Widget.AppCompat.Button.Colored"/>
        </TableRow>

    </TableLayout>

</LinearLayout>