<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/popup_delete_alternative"
    android:backgroundTint="@color/cardColorD">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/excluir_imagem"
            android:background="@color/colorPrimaryD"
            android:textColor="@color/textColorD"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/cardColorD"
                app:cardCornerRadius="16dp">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_photo_dark"/>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nome"
                    android:textColor="@color/textColorD"
                    android:maxLines="2"/>

                <TextView
                    android:id="@+id/tamanho"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorD"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/dimenssao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorD"
                    android:visibility="gone"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryD"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_nao"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/textColorD"
                android:text="@string/nao"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

            <Button
                android:id="@+id/btn_sim"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/textColorD"
                android:text="@string/sim"
                style="@style/Widget.AppCompat.Button.Colored"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
