<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/item_margin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:src="?attr/ic_photo"

            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/video_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:padding="5dp"
            android:visibility="gone"
            android:src="?attr/ic_video"

            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:enabled="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingHorizontal="7dp"
            android:background="?attr/transparenteColor"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollHorizontally="true"
                android:text="@string/album_name"
                android:ellipsize="end"
                android:maxLines="1"
                android:shadowColor="?attr/colorPrimary"
                android:shadowRadius="5.0"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/image_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_fotos"
                android:maxLines="1"
                android:shadowColor="?attr/colorPrimary"
                android:shadowRadius="5.0"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/video_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_videos"
                android:maxLines="1"
                android:shadowColor="?attr/colorPrimary"
                android:shadowRadius="5.0"
                android:textSize="12sp" />

        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>